test/libsolidity/syntaxTests/using/global_library_with_asterisk.sol
using L for * global;
library L {}
// ----
// SyntaxError 8118: (0-21): The type has to be specified explicitly at file level (cannot use '*').
// SyntaxError 2854: (0-21): Can only globally attach functions to specific types.
